Update Estimate Beta - Live.ipynb

--- a/Beta/Estimate Beta - Live.ipynb
+++ b/Beta/Estimate Beta - Live.ipynb
@@ -44,8 +44,22 @@
    "source": [
     "# Input the reference name from Yahoo Finance\n",
     "a = \"1155.KL\"\n",
-    "b = \"^KLSE%3FP%3D^KLSE\"\n",
-    "\n",
+    "b = \"^KLSE%3FP%3D^KLSE\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Input based on the above \n",
     "input = [a,b]"
    ]
