Update Estimate Beta - Historical.ipynb

--- a/Beta/Historical Beta/Estimate Beta - Historical.ipynb
+++ b/Beta/Historical Beta/Estimate Beta - Historical.ipynb
@@ -10,6 +10,20 @@
   {
    "cell_type": "markdown",
    "source": [
+    "Instruction: Obtain the tickers from Yahoo Finance and the effective date for Beta computation. You will get an Excel copy of the results. "
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Note: This is for educational purpose only . The model may not suitable for business valuation project. "
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "Libraries"
    ],
    "metadata": {}
@@ -35,7 +49,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Input: To Fill "
+    "# Input: To Fill Tickers and Effective Date"
    ],
    "metadata": {}
   },
@@ -44,6 +58,8 @@
    "execution_count": 2,
    "source": [
     "# Input the reference name from Yahoo Finance\r\n",
+    "# \"a\" is the stock ticker to obtain from Yahoo Finance\r\n",
+    "# \"b\" is the index ticket to obtain from Yahoo Finance \r\n",
     "a = \"1295.KL\"\r\n",
     "b = \"^KLSE%3B1%3D9\"\r\n",
     "\r\n",
