--- a/Stock Screening/Malaysia Stocks.ipynb
+++ b/Stock Screening/Malaysia Stocks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Define Stock Functions"
+    "# Define Stock Price Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,17 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 984 stocks listed in Bursa Malaysia.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "stock_list = get_stock_list ()\n",
     "print(\"There are\", len(stock_list), \"stocks listed in Bursa Malaysia.\")"
@@ -109,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,17 +119,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['FIMACOR', 'IJM', 'MAG', 'KSENG', 'L&G', 'MAYBANK', 'MEDIA', 'MRCB', 'OIB', 'TCHONG', 'UEMS', 'WZSATU', 'KRONO', 'SGBHD']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# main program\n",
     "if __name__ == '__main__':\n",
