Update Simple Valuation Model.ipynb

--- a/Valuation Model/Simple Valuation Model.ipynb
+++ b/Valuation Model/Simple Valuation Model.ipynb
@@ -121,27 +121,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                        Year -4 Year -3 Year -2 Year -1 Year 0 Year 1 Year 2 Year 3 Year 4 Year 5 Year 6 Year 7 Year 8 Year 9 Year 10 Terminal Value\n",
-      "Revenue                     100     110     120     130    140  156.9  174.2  191.3  208.0  223.9  238.4  251.2  261.9  270.0   275.4            NaN\n",
-      "Revenue Growth Rate (%)            10.0     9.1     8.3    7.7   12.1   11.0    9.9    8.7    7.6    6.5    5.4    4.2    3.1     2.0            NaN\n",
-      "EBIT                         60      66      72      78     85   95.3  105.7  116.2  126.3  135.9  144.8  152.5  159.0  164.0   167.2            NaN\n",
-      "EBIT Margin (%)            60.0    60.0    60.0    60.0   60.7   60.7   60.7   60.7   60.7   60.7   60.7   60.7   60.7   60.7    60.7            NaN\n",
-      "EBIT (1 - tax rate)        42.0    46.2    50.4    54.6   59.5   66.7   74.0   81.3   88.4   95.2  101.3  106.8  111.3  114.8   117.1            NaN\n",
-      "Reinvestment               28.6    31.4    34.3    38.6   42.9   33.6   37.3   41.0   44.6   48.0   51.1   53.8   56.1   57.9    59.0            NaN\n",
-      "Free Cash Flows to Firm    13.4    14.8    16.1    16.0   16.6   33.1   36.7   40.3   43.8   47.2   50.2   52.9   55.2   56.9    58.0            NaN\n",
-      "Discount Factor             NaN     NaN     NaN     NaN    NaN    0.9    0.9    0.8    0.7    0.7    0.6    0.6    0.6    0.5     0.5            NaN\n",
-      "PV of Free Cash Flows       NaN     NaN     NaN     NaN    NaN   30.6   31.5   32.2   32.6   32.8   32.7   32.3   31.6   30.7    29.5          850.1\n",
-      "Enterprise Value            NaN     NaN     NaN     NaN 1166.6    NaN    NaN    NaN    NaN    NaN    NaN    NaN    NaN    NaN     NaN            NaN\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(df)"
+    "df = df.replace(np.nan, '', regex=True)"
    ]
   },
   {
@@ -152,275 +134,14 @@
     {
      "data": {
       "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Year -4</th>\n",
-       "      <th>Year -3</th>\n",
-       "      <th>Year -2</th>\n",
-       "      <th>Year -1</th>\n",
-       "      <th>Year 0</th>\n",
-       "      <th>Year 1</th>\n",
-       "      <th>Year 2</th>\n",
-       "      <th>Year 3</th>\n",
-       "      <th>Year 4</th>\n",
-       "      <th>Year 5</th>\n",
-       "      <th>Year 6</th>\n",
-       "      <th>Year 7</th>\n",
-       "      <th>Year 8</th>\n",
-       "      <th>Year 9</th>\n",
-       "      <th>Year 10</th>\n",
-       "      <th>Terminal Value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Revenue</th>\n",
-       "      <td>100</td>\n",
-       "      <td>110</td>\n",
-       "      <td>120</td>\n",
-       "      <td>130</td>\n",
-       "      <td>140</td>\n",
-       "      <td>156.9</td>\n",
-       "      <td>174.2</td>\n",
-       "      <td>191.3</td>\n",
-       "      <td>208.0</td>\n",
-       "      <td>223.9</td>\n",
-       "      <td>238.4</td>\n",
-       "      <td>251.2</td>\n",
-       "      <td>261.9</td>\n",
-       "      <td>270.0</td>\n",
-       "      <td>275.4</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Revenue Growth Rate (%)</th>\n",
-       "      <td></td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>9.1</td>\n",
-       "      <td>8.3</td>\n",
-       "      <td>7.7</td>\n",
-       "      <td>12.1</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>9.9</td>\n",
-       "      <td>8.7</td>\n",
-       "      <td>7.6</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>4.2</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>EBIT</th>\n",
-       "      <td>60</td>\n",
-       "      <td>66</td>\n",
-       "      <td>72</td>\n",
-       "      <td>78</td>\n",
-       "      <td>85</td>\n",
-       "      <td>95.3</td>\n",
-       "      <td>105.7</td>\n",
-       "      <td>116.2</td>\n",
-       "      <td>126.3</td>\n",
-       "      <td>135.9</td>\n",
-       "      <td>144.8</td>\n",
-       "      <td>152.5</td>\n",
-       "      <td>159.0</td>\n",
-       "      <td>164.0</td>\n",
-       "      <td>167.2</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>EBIT Margin (%)</th>\n",
-       "      <td>60.0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>60.7</td>\n",
-       "      <td>60.7</td>\n",
-       "      <td>60.7</td>\n",
-       "      <td>60.7</td>\n",
-       "      <td>60.7</td>\n",
-       "      <td>60.7</td>\n",
-       "      <td>60.7</td>\n",
-       "      <td>60.7</td>\n",
-       "      <td>60.7</td>\n",
-       "      <td>60.7</td>\n",
-       "      <td>60.7</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>EBIT (1 - tax rate)</th>\n",
-       "      <td>42.0</td>\n",
-       "      <td>46.2</td>\n",
-       "      <td>50.4</td>\n",
-       "      <td>54.6</td>\n",
-       "      <td>59.5</td>\n",
-       "      <td>66.7</td>\n",
-       "      <td>74.0</td>\n",
-       "      <td>81.3</td>\n",
-       "      <td>88.4</td>\n",
-       "      <td>95.2</td>\n",
-       "      <td>101.3</td>\n",
-       "      <td>106.8</td>\n",
-       "      <td>111.3</td>\n",
-       "      <td>114.8</td>\n",
-       "      <td>117.1</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Reinvestment</th>\n",
-       "      <td>28.6</td>\n",
-       "      <td>31.4</td>\n",
-       "      <td>34.3</td>\n",
-       "      <td>38.6</td>\n",
-       "      <td>42.9</td>\n",
-       "      <td>33.6</td>\n",
-       "      <td>37.3</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>44.6</td>\n",
-       "      <td>48.0</td>\n",
-       "      <td>51.1</td>\n",
-       "      <td>53.8</td>\n",
-       "      <td>56.1</td>\n",
-       "      <td>57.9</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Free Cash Flows to Firm</th>\n",
-       "      <td>13.4</td>\n",
-       "      <td>14.8</td>\n",
-       "      <td>16.1</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>16.6</td>\n",
-       "      <td>33.1</td>\n",
-       "      <td>36.7</td>\n",
-       "      <td>40.3</td>\n",
-       "      <td>43.8</td>\n",
-       "      <td>47.2</td>\n",
-       "      <td>50.2</td>\n",
-       "      <td>52.9</td>\n",
-       "      <td>55.2</td>\n",
-       "      <td>56.9</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Discount Factor</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.6</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PV of Free Cash Flows</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>30.6</td>\n",
-       "      <td>31.5</td>\n",
-       "      <td>32.2</td>\n",
-       "      <td>32.6</td>\n",
-       "      <td>32.8</td>\n",
-       "      <td>32.7</td>\n",
-       "      <td>32.3</td>\n",
-       "      <td>31.6</td>\n",
-       "      <td>30.7</td>\n",
-       "      <td>29.5</td>\n",
-       "      <td>850.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Enterprise Value</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>1166.6</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        Year -4 Year -3 Year -2 Year -1 Year 0 Year 1 Year 2 Year 3 Year 4 Year 5 Year 6 Year 7 Year 8 Year 9 Year 10 Terminal Value\n",
-       "Revenue                     100     110     120     130    140  156.9  174.2  191.3  208.0  223.9  238.4  251.2  261.9  270.0   275.4               \n",
-       "Revenue Growth Rate (%)            10.0     9.1     8.3    7.7   12.1   11.0    9.9    8.7    7.6    6.5    5.4    4.2    3.1     2.0               \n",
-       "EBIT                         60      66      72      78     85   95.3  105.7  116.2  126.3  135.9  144.8  152.5  159.0  164.0   167.2               \n",
-       "EBIT Margin (%)            60.0    60.0    60.0    60.0   60.7   60.7   60.7   60.7   60.7   60.7   60.7   60.7   60.7   60.7    60.7               \n",
-       "EBIT (1 - tax rate)        42.0    46.2    50.4    54.6   59.5   66.7   74.0   81.3   88.4   95.2  101.3  106.8  111.3  114.8   117.1               \n",
-       "Reinvestment               28.6    31.4    34.3    38.6   42.9   33.6   37.3   41.0   44.6   48.0   51.1   53.8   56.1   57.9    59.0               \n",
-       "Free Cash Flows to Firm    13.4    14.8    16.1    16.0   16.6   33.1   36.7   40.3   43.8   47.2   50.2   52.9   55.2   56.9    58.0               \n",
-       "Discount Factor                                                   0.9    0.9    0.8    0.7    0.7    0.6    0.6    0.6    0.5     0.5               \n",
-       "PV of Free Cash Flows                                            30.6   31.5   32.2   32.6   32.8   32.7   32.3   31.6   30.7    29.5          850.1\n",
-       "Enterprise Value                                        1166.6                                                                                      "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = df.replace(np.nan, '', regex=True)\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
        "\n",
        "<style>\n",
        ".dataframe {border: 1px solid black; border-collapse: collapse;}\n",
        ".dataframe th, .dataframe td {text-align: right; padding: 10px; border: 1px solid black;}\n",
-       ".dataframe th:nth-child(-n+6), .dataframe td:nth-child(-n+6) {background-color: #EEE;}\n",
-       ".dataframe th:nth-child(22), .dataframe td:nth-child(22) {color: black;}\n",
+       ".dataframe th:nth-child(1), .dataframe td:nth-child(1) {text-align: left;}\n",
+       ".dataframe td:nth-child(n+2):nth-child(-n+6) {color: lightgrey;}\n",
+       ".dataframe td:nth-child(23), .dataframe td:last-child {color: black;}\n",
+       ".dataframe td:last-child {color: black;}\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -653,8 +374,10 @@
     "<style>\n",
     ".dataframe {{border: 1px solid black; border-collapse: collapse;}}\n",
     ".dataframe th, .dataframe td {{text-align: right; padding: 10px; border: 1px solid black;}}\n",
-    ".dataframe th:nth-child(-n+6), .dataframe td:nth-child(-n+6) {{background-color: #EEE;}}\n",
-    ".dataframe th:nth-child(22), .dataframe td:nth-child(22) {{color: black;}}\n",
+    ".dataframe th:nth-child(1), .dataframe td:nth-child(1) {{text-align: left;}}\n",
+    ".dataframe td:nth-child(n+2):nth-child(-n+6) {{color: lightgrey;}}\n",
+    ".dataframe td:nth-child(23), .dataframe td:last-child {{color: black;}}\n",
+    ".dataframe td:last-child {{color: black;}}\n",
     "</style>\n",
     "{df_html}\n",
     "\"\"\"\n",
