Update Simple Valuation Model.ipynb

--- a/Valuation Model/Simple Valuation Model.ipynb
+++ b/Valuation Model/Simple Valuation Model.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -139,9 +139,8 @@
        ".dataframe {border: 1px solid black; border-collapse: collapse;}\n",
        ".dataframe th, .dataframe td {text-align: right; padding: 10px; border: 1px solid black;}\n",
        ".dataframe th:nth-child(1), .dataframe td:nth-child(1) {text-align: left;}\n",
-       ".dataframe td:nth-child(n+2):nth-child(-n+6) {color: lightgrey;}\n",
-       ".dataframe td:nth-child(23), .dataframe td:last-child {color: black;}\n",
-       ".dataframe td:last-child {color: black;}\n",
+       ".dataframe td:nth-child(n+2):nth-child(-n+6) {color: grey;}\n",
+       ".dataframe tr:last-child td {color: black; font-weight: bold;}\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -375,9 +374,8 @@
     ".dataframe {{border: 1px solid black; border-collapse: collapse;}}\n",
     ".dataframe th, .dataframe td {{text-align: right; padding: 10px; border: 1px solid black;}}\n",
     ".dataframe th:nth-child(1), .dataframe td:nth-child(1) {{text-align: left;}}\n",
-    ".dataframe td:nth-child(n+2):nth-child(-n+6) {{color: lightgrey;}}\n",
-    ".dataframe td:nth-child(23), .dataframe td:last-child {{color: black;}}\n",
-    ".dataframe td:last-child {{color: black;}}\n",
+    ".dataframe td:nth-child(n+2):nth-child(-n+6) {{color: grey;}}\n",
+    ".dataframe tr:last-child td {{color: black; font-weight: bold;}}\n",
     "</style>\n",
     "{df_html}\n",
     "\"\"\"\n",
