Update Simple Valuation Model.ipynb

--- a/Valuation Model/Simple Valuation Model.ipynb
+++ b/Valuation Model/Simple Valuation Model.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "# define variables for past 5 years\n",
     "ebit = np.array([60, 66, 72, 78, 85]) \n",
-    "tax_rate = np.array([0.3, 0.3, 0.3, 0.3, 0.3]) \n",
+    "tax_rate = 0.3\n",
     "capex = np.array([30, 33, 36, 40, 44])\n",
     "depreciation = np.array([10, 11, 12, 13, 14])\n",
     "roic = np.array([0.2, 0.21, 0.22, 0.23, 0.24])\n",
@@ -34,8 +34,31 @@
     "reinvestment_rate = (capex - depreciation) / (ebit * (1 - tax_rate))\n",
     "ebit_margin = ebit / revenue\n",
     "\n",
-    "# calculate growth rate for the first 5 years\n",
-    "growth_rate = reinvestment_rate * roic"
+    "# Growth Rate\n",
+    "# Calculate initial growth rate for year 1-5\n",
+    "growth_rate_initial = reinvestment_rate[-1] * roic[-1]\n",
+    "# Create an array for the first 5 years with constant growth rate\n",
+    "growth_rates_1_to_5 = np.full(5, growth_rate_initial)\n",
+    "# Initialize the array for the next 5 years\n",
+    "growth_rates_6_to_10 = np.zeros(5)\n",
+    "# Set the growth rate for the 6th year\n",
+    "growth_rates_6_to_10[0] = growth_rate_initial - ((growth_rate_initial - risk_free_rate) / 5)\n",
+    "# Calculate growth rates for the 7th to 10th years\n",
+    "for i in range(1, 5):\n",
+    "    growth_rates_6_to_10[i] = growth_rates_6_to_10[i - 1] - ((growth_rates_6_to_10[i - 1] - risk_free_rate) / 5)\n",
+    "# Concatenate the two arrays\n",
+    "growth_rates = np.concatenate([growth_rates_1_to_5, growth_rates_6_to_10])\n",
+    "\n",
+    "# growth rate applied at EBIT level\n",
+    "# Initialize array for future EBIT\n",
+    "ebit_future = np.zeros(10)\n",
+    "# Calculate EBIT for the first future year\n",
+    "ebit_future[0] = ebit[-1] * (1 + growth_rates[0])\n",
+    "# Calculate EBIT for the 2nd to 10th future years\n",
+    "for i in range(1, 10):\n",
+    "    ebit_future[i] = ebit_future[i - 1] * (1 + growth_rates[i])\n",
+    "\n",
+    "revenue_future = ebit_future / ebit_margin[-1]"
    ]
   },
   {
@@ -46,7 +69,7 @@
    "source": [
     "# create DataFrame to store all the data\n",
     "columns = ['Year ' + str(i) for i in range(-4, 11)] + ['Terminal Value']\n",
-    "index = ['Revenue', 'Revenue Growth Rate (%)', 'EBIT', 'EBIT Margin (%)', 'EBIT (1 - tax rate)', 'Reinvestment', 'Free Cash Flows to Firm', 'Discount Factor', 'PV of Free Cash Flows']\n",
+    "index = ['Revenue', 'Revenue Growth Rate (%)', 'EBIT', 'EBIT Margin (%)', 'EBIT (1 - tax rate)', 'Reinvestment', 'Free Cash Flows to Firm', 'Discount Rate (%)', 'Discount Factor', 'PV of Free Cash Flows']\n",
     "df = pd.DataFrame(columns=columns, index=index)"
    ]
   },
@@ -56,10 +79,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create forecast for the next 10 years\n",
-    "years = np.arange(1, 11)\n",
-    "growth_rates = np.linspace(growth_rate[-1], risk_free_rate, 10)\n",
-    "wacc_values = np.linspace(wacc, risk_free_rate + equity_risk_premium, 10)\n",
+    "# WACC \n",
+    "# create two arrays: one for the first 5 years with constant WACC and one for the next 5 years with decreasing values\n",
+    "wacc_values_1_to_5 = np.full(5, wacc)\n",
+    "wacc_values_6_to_10 = np.linspace(wacc, risk_free_rate + equity_risk_premium, 5)\n",
+    "# concatenate the two arrays\n",
+    "wacc_values = np.concatenate([wacc_values_1_to_5, wacc_values_6_to_10])\n",
     "\n",
     "# Historical data\n",
     "for i in range(5):\n",
@@ -67,24 +92,25 @@
     "    df.loc['Revenue Growth Rate (%)', 'Year ' + str(i-4)] = (revenue[i] - revenue[i-1]) / revenue[i-1] * 100 if i != 0 else \"\"\n",
     "    df.loc['EBIT', 'Year ' + str(i-4)] = ebit[i]\n",
     "    df.loc['EBIT Margin (%)', 'Year ' + str(i-4)] = ebit_margin[i] * 100\n",
-    "    df.loc['EBIT (1 - tax rate)', 'Year ' + str(i-4)] = ebit[i] * (1 - tax_rate[i])\n",
+    "    df.loc['EBIT (1 - tax rate)', 'Year ' + str(i-4)] = ebit[i] * (1 - tax_rate)\n",
     "    df.loc['Reinvestment', 'Year ' + str(i-4)] = reinvestment_rate[i] * ebit[i]\n",
-    "    df.loc['Free Cash Flows to Firm', 'Year ' + str(i-4)] = ebit[i] * (1 - tax_rate[i]) - reinvestment_rate[i] * ebit[i]\n",
+    "    df.loc['Free Cash Flows to Firm', 'Year ' + str(i-4)] = ebit[i] * (1 - tax_rate) - reinvestment_rate[i] * ebit[i]\n",
     "\n",
     "# calculate revenue, EBIT, and other values for the next 10 years\n",
     "for i in range(10):\n",
     "    if i == 0:\n",
-    "        df.loc['Revenue', 'Year ' + str(i+1)] = revenue[-1] * (1 + growth_rates[i])\n",
-    "        df.loc['Revenue Growth Rate (%)', 'Year ' + str(i+1)] = growth_rates[i] * 100\n",
+    "        df.loc['Revenue', 'Year ' + str(i+1)] = revenue_future[0]\n",
+    "        df.loc['Revenue Growth Rate (%)', 'Year ' + str(i+1)] = (revenue_future[0] - revenue[-1]) / revenue[-1] * 100\n",
     "    else:\n",
-    "        df.loc['Revenue', 'Year ' + str(i+1)] = df.loc['Revenue', 'Year ' + str(i)] * (1 + growth_rates[i])\n",
-    "        df.loc['Revenue Growth Rate (%)', 'Year ' + str(i+1)] = growth_rates[i] * 100\n",
+    "        df.loc['Revenue', 'Year ' + str(i+1)] = revenue_future[i]\n",
+    "        df.loc['Revenue Growth Rate (%)', 'Year ' + str(i+1)] = (revenue_future[i] - revenue_future[i-1]) / revenue_future[i-1] * 100\n",
     "\n",
-    "    df.loc['EBIT', 'Year ' + str(i+1)] = df.loc['Revenue', 'Year ' + str(i+1)] * ebit_margin[-1]\n",
+    "    df.loc['EBIT', 'Year ' + str(i+1)] = ebit_future[i]\n",
     "    df.loc['EBIT Margin (%)', 'Year ' + str(i+1)] = ebit_margin[-1] * 100\n",
-    "    df.loc['EBIT (1 - tax rate)', 'Year ' + str(i+1)] = df.loc['EBIT', 'Year ' + str(i+1)] * (1 - tax_rate[-1])\n",
-    "    df.loc['Reinvestment', 'Year ' + str(i+1)] = reinvestment_rate[-1] * df.loc['EBIT (1 - tax rate)', 'Year ' + str(i+1)]\n",
+    "    df.loc['EBIT (1 - tax rate)', 'Year ' + str(i+1)] = df.loc['EBIT', 'Year ' + str(i+1)] * (1 - tax_rate)\n",
+    "    df.loc['Reinvestment', 'Year ' + str(i+1)] = reinvestment_rate[-1] * df.loc['EBIT', 'Year ' + str(i+1)]\n",
     "    df.loc['Free Cash Flows to Firm', 'Year ' + str(i+1)] = df.loc['EBIT (1 - tax rate)', 'Year ' + str(i+1)] - df.loc['Reinvestment', 'Year ' + str(i+1)]\n",
+    "    df.loc['Discount Rate (%)', 'Year ' + str(i+1)] = round(wacc_values[i] * 100, 2)\n",
     "    df.loc['Discount Factor', 'Year ' + str(i+1)] = 1 / (1 + wacc_values[i]) ** (i+1)\n",
     "    df.loc['PV of Free Cash Flows', 'Year ' + str(i+1)] = df.loc['Free Cash Flows to Firm', 'Year ' + str(i+1)] * df.loc['Discount Factor', 'Year ' + str(i+1)]\n",
     "\n",
@@ -105,7 +131,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Enterprise Value:  1166.562910975288\n"
+      "Total Enterprise Value:  1292.4205361063239\n"
      ]
     }
    ],
@@ -128,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -173,15 +199,15 @@
        "      <td>130</td>\n",
        "      <td>140</td>\n",
        "      <td>156.9</td>\n",
-       "      <td>174.2</td>\n",
-       "      <td>191.3</td>\n",
-       "      <td>208.0</td>\n",
-       "      <td>223.9</td>\n",
-       "      <td>238.4</td>\n",
-       "      <td>251.2</td>\n",
-       "      <td>261.9</td>\n",
-       "      <td>270.0</td>\n",
-       "      <td>275.4</td>\n",
+       "      <td>175.9</td>\n",
+       "      <td>197.2</td>\n",
+       "      <td>221.1</td>\n",
+       "      <td>247.8</td>\n",
+       "      <td>272.8</td>\n",
+       "      <td>295.9</td>\n",
+       "      <td>317.1</td>\n",
+       "      <td>336.6</td>\n",
+       "      <td>354.5</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -192,15 +218,15 @@
        "      <td>8.3</td>\n",
        "      <td>7.7</td>\n",
        "      <td>12.1</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>9.9</td>\n",
-       "      <td>8.7</td>\n",
-       "      <td>7.6</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>4.2</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>12.1</td>\n",
+       "      <td>12.1</td>\n",
+       "      <td>12.1</td>\n",
+       "      <td>12.1</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>5.3</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -211,15 +237,15 @@
        "      <td>78</td>\n",
        "      <td>85</td>\n",
        "      <td>95.3</td>\n",
-       "      <td>105.7</td>\n",
-       "      <td>116.2</td>\n",
-       "      <td>126.3</td>\n",
-       "      <td>135.9</td>\n",
-       "      <td>144.8</td>\n",
-       "      <td>152.5</td>\n",
-       "      <td>159.0</td>\n",
-       "      <td>164.0</td>\n",
-       "      <td>167.2</td>\n",
+       "      <td>106.8</td>\n",
+       "      <td>119.7</td>\n",
+       "      <td>134.2</td>\n",
+       "      <td>150.5</td>\n",
+       "      <td>165.6</td>\n",
+       "      <td>179.7</td>\n",
+       "      <td>192.5</td>\n",
+       "      <td>204.4</td>\n",
+       "      <td>215.2</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -249,15 +275,15 @@
        "      <td>54.6</td>\n",
        "      <td>59.5</td>\n",
        "      <td>66.7</td>\n",
-       "      <td>74.0</td>\n",
-       "      <td>81.3</td>\n",
-       "      <td>88.4</td>\n",
-       "      <td>95.2</td>\n",
-       "      <td>101.3</td>\n",
-       "      <td>106.8</td>\n",
-       "      <td>111.3</td>\n",
-       "      <td>114.8</td>\n",
-       "      <td>117.1</td>\n",
+       "      <td>74.8</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>105.3</td>\n",
+       "      <td>116.0</td>\n",
+       "      <td>125.8</td>\n",
+       "      <td>134.8</td>\n",
+       "      <td>143.1</td>\n",
+       "      <td>150.7</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -267,16 +293,16 @@
        "      <td>34.3</td>\n",
        "      <td>38.6</td>\n",
        "      <td>42.9</td>\n",
-       "      <td>33.6</td>\n",
-       "      <td>37.3</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>44.6</td>\n",
        "      <td>48.0</td>\n",
-       "      <td>51.1</td>\n",
-       "      <td>53.8</td>\n",
-       "      <td>56.1</td>\n",
-       "      <td>57.9</td>\n",
-       "      <td>59.0</td>\n",
+       "      <td>53.9</td>\n",
+       "      <td>60.4</td>\n",
+       "      <td>67.7</td>\n",
+       "      <td>75.9</td>\n",
+       "      <td>83.5</td>\n",
+       "      <td>90.6</td>\n",
+       "      <td>97.1</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>108.5</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -286,16 +312,35 @@
        "      <td>16.1</td>\n",
        "      <td>16.0</td>\n",
        "      <td>16.6</td>\n",
-       "      <td>33.1</td>\n",
-       "      <td>36.7</td>\n",
-       "      <td>40.3</td>\n",
-       "      <td>43.8</td>\n",
-       "      <td>47.2</td>\n",
-       "      <td>50.2</td>\n",
-       "      <td>52.9</td>\n",
-       "      <td>55.2</td>\n",
-       "      <td>56.9</td>\n",
-       "      <td>58.0</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>20.9</td>\n",
+       "      <td>23.4</td>\n",
+       "      <td>26.3</td>\n",
+       "      <td>29.5</td>\n",
+       "      <td>32.4</td>\n",
+       "      <td>35.2</td>\n",
+       "      <td>37.7</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>42.1</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Discount Rate (%)</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>7.0</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -324,17 +369,17 @@
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
-       "      <td>30.6</td>\n",
-       "      <td>31.5</td>\n",
-       "      <td>32.2</td>\n",
-       "      <td>32.6</td>\n",
-       "      <td>32.8</td>\n",
-       "      <td>32.7</td>\n",
-       "      <td>32.3</td>\n",
-       "      <td>31.6</td>\n",
-       "      <td>30.7</td>\n",
-       "      <td>29.5</td>\n",
-       "      <td>850.1</td>\n",
+       "      <td>17.3</td>\n",
+       "      <td>17.9</td>\n",
+       "      <td>18.6</td>\n",
+       "      <td>19.3</td>\n",
+       "      <td>20.1</td>\n",
+       "      <td>20.4</td>\n",
+       "      <td>20.9</td>\n",
+       "      <td>21.1</td>\n",
+       "      <td>21.3</td>\n",
+       "      <td>21.4</td>\n",
+       "      <td>1094.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Enterprise Value</th>\n",
@@ -342,7 +387,7 @@
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
-       "      <td>1166.6</td>\n",
+       "      <td>1292.4</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
